# restio-fe/openapi/api.yaml
@@ -11,6 +11,62 @@ servers:
     - url: http://localhost:8080/api/v1
       description: Wiremock
 paths:
+    /auth/login:
+        post:
+            tags:
+                - auth
+            summary: Logs user into the system
+            operationId: login
+            requestBody:
+                $ref: '#/components/requestBodies/UserCredentials'
+            responses:
+                200:
+                    description: successful operation
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/UserAuth'
+                                type: object
+                400:
+                    description: Invalid username/password supplied
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Error'
+    /auth/logout:
+        get:
+            tags:
+                - auth
+            summary: Logs out current logged in user
+            operationId: logout
+            responses:
+                200:
+                    description: successful operation
+            security:
+                - BearerAuth: []
+    /auth/signup:
+        post:
+            tags:
+                - auth
+            summary: Sign up a new User
+            operationId: signUp
+            requestBody:
+                description: A JSON object containing user credentials
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/UserSignUpCredentials'
+
+            responses:
+                '201':
+                    description: Created
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/UserAuth'
+                default:
+                    $ref: '#/components/responses/UnknownError'
     /users:
         get:
             tags:
@@ -65,6 +121,7 @@ paths:
                                 $ref: '#/components/schemas/UserAuth'
                 default:
                     $ref: '#/components/responses/UnknownError'
+            deprecated: true
     /users/{userId}:
         put:
             tags:
@@ -156,6 +213,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Error'
+            deprecated: true
     /users/logout:
         get:
             tags:
@@ -167,6 +225,7 @@ paths:
                     description: successful operation
             security:
                 - BearerAuth: []
+            deprecated: true
     /restaurants:
         get:
             tags:
@@ -226,7 +285,7 @@ paths:
                 default:
                     $ref: '#/components/responses/UnknownError'
             security:
-                - BearerAuth: [User]
+                - BearerAuth: [Owner]
     /restaurants/{restaurantId}:
         get:
             tags:
@@ -253,10 +312,6 @@ paths:
                                 properties:
                                     restaurant:
                                         $ref: '#/components/schemas/Restaurant'
-                                    reviews:
-                                        type: array
-                                        items:
-                                            $ref: '#/components/schemas/Review'
                                     highestReview:
                                         $ref: '#/components/schemas/Review'
                                     lowestReview:
